<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/tf_nav_dashboard" />
        <item
            android:id="@+id/nav_portfolio"
            android:icon="@drawable/wallet"
            android:title="@string/tf_nav_portfolio" />
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/synchronization"
            android:title="@string/tf_nav_connect" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/tf_nav_settings" />
</menu>
